versions/v2.8/modules/en/pages/rancher-admin/global-configuration/provisioning-drivers/manage-node-drivers.adoc
= Node Drivers
:revdate: 2024-10-17
:page-revdate: {revdate}

A node driver is the same as a https://github.com/docker/docs/blob/vnext-engine/machine/drivers/index.md[Docker Machine driver]. Node drivers are used to provision hosts, which Rancher uses to launch and manage Kubernetes clusters. By default, Rancher is packaged with many node drivers, but you can also create and add custom node drivers to Rancher.

Only `Active` node drivers are displayed in the Rancher UI when you create node templates. If there are specific node drivers that you don't want to show your users, you must deactivate these node drivers.

== Managing Node Drivers

[NOTE]
.Prerequisites:
====

To create, edit, or delete drivers, you need _one_ of the following permissions:

* xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc[Administrator Global Permissions]
* xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc#_custom_global_permissions[Custom Global Permissions] with the xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc[Manage Node Drivers] role assigned.
====


=== Activating/Deactivating Node Drivers

By default, Rancher only activates drivers for the most popular cloud providers, such as Amazon EC2, Azure, DigitalOcean, Linode and vSphere. If you want to show or hide any node driver, you can change its status.

. In the upper left corner, click *☰ > Cluster Management*.
. In the left navigation menu, click *Drivers*.
. On the *Node Drivers* tab, select the driver that you wish to activate or deactivate and click *⋮ > Activate* or *⋮ > Deactivate*.

[WARNING]
====

You can lose access to clusters after deactivating a node driver.

Deactivating a node driver doesn't just affect its visibility in the Rancher UI. When you deactivate or delete a node driver, any nodes deployed with that driver become inaccessible.

For example, if you deactivate a vSphere node driver to hide it in the UI, and you have a vSphere cluster that was deployed with that driver, the initial node in the cluster will fail, and the entire cluster will become inaccessible. Attempts to delete the vSphere nodes will fail, with nodes stuck in an extended `Removing` state.

Before you deactivate a node driver, make sure that it has no associated clusters. One way to check is to see if the respective platform for a driver is listed among your clusters:

. In the upper left corner, click *☰ > Cluster Management*.
. Select *Clusters*.
. Check the *Provider* column of the table for instances of the node driver you are deactivating.
====


=== Adding Custom Node Drivers

If you want to use a node driver that Rancher doesn't support out-of-the-box, you can add that provider's driver in order to start using them to create node templates and eventually node pools for your Kubernetes cluster.

. In the upper left corner, click *☰ > Cluster Management*.
. In the left navigation menu, click *Drivers*.
. On *Node Drivers* tab, click *Add Node Driver*.
. Complete the *Add Node Driver* form. Then click *Create*.

=== Developing Your Own Node Drivers

Node drivers are implemented with https://github.com/rancher/machine[Rancher Machine], a fork of https://github.com/docker/machine[Docker Machine]. Docker Machine is no longer under active development.

Refer to the original https://github.com/docker/docs/blob/vnext-engine/machine/overview.md[Docker Machine documentation] for details on how to develop your own node drivers.
